// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-disclosure-button #render should render component as expected (1) 1`] = `
<gux-disclosure-button-legacy>
  <mock:shadow-root>
    <div class="gux-disclosure-button-container gux-left">
      <button aria-controls="gux-disclosure-button-panel-i" aria-expanded="false" aria-label="Disclosure button" class="gux-disclosure-button">
        <gux-icon decorative="" icon-name="fa/caret-right-solid"></gux-icon>
      </button>
      <div class="gux-disclosure-panel" id="gux-disclosure-button-panel-i" role="region">
        <slot name="panel-content"></slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-disclosure-button-legacy>
`;

exports[`gux-disclosure-button #render should render component as expected (2) 1`] = `
<gux-disclosure-button-legacy is-open="">
  <mock:shadow-root>
    <div class="gux-disclosure-button-container gux-left">
      <button aria-controls="gux-disclosure-button-panel-i" aria-expanded="true" aria-label="Disclosure button" class="gux-disclosure-button">
        <gux-icon decorative="" icon-name="fa/caret-left-solid"></gux-icon>
      </button>
      <div class="gux-active gux-disclosure-panel" id="gux-disclosure-button-panel-i" role="region">
        <slot name="panel-content"></slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-disclosure-button-legacy>
`;

exports[`gux-disclosure-button #render should render component as expected (3) 1`] = `
<gux-disclosure-button-legacy position="left">
  <mock:shadow-root>
    <div class="gux-disclosure-button-container gux-left">
      <button aria-controls="gux-disclosure-button-panel-i" aria-expanded="false" aria-label="Disclosure button" class="gux-disclosure-button">
        <gux-icon decorative="" icon-name="fa/caret-right-solid"></gux-icon>
      </button>
      <div class="gux-disclosure-panel" id="gux-disclosure-button-panel-i" role="region">
        <slot name="panel-content"></slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-disclosure-button-legacy>
`;

exports[`gux-disclosure-button #render should render component as expected (4) 1`] = `
<gux-disclosure-button-legacy is-open="" position="left">
  <mock:shadow-root>
    <div class="gux-disclosure-button-container gux-left">
      <button aria-controls="gux-disclosure-button-panel-i" aria-expanded="true" aria-label="Disclosure button" class="gux-disclosure-button">
        <gux-icon decorative="" icon-name="fa/caret-left-solid"></gux-icon>
      </button>
      <div class="gux-active gux-disclosure-panel" id="gux-disclosure-button-panel-i" role="region">
        <slot name="panel-content"></slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-disclosure-button-legacy>
`;

exports[`gux-disclosure-button #render should render component as expected (5) 1`] = `
<gux-disclosure-button-legacy position="right">
  <mock:shadow-root>
    <div class="gux-disclosure-button-container gux-right">
      <button aria-controls="gux-disclosure-button-panel-i" aria-expanded="false" aria-label="Disclosure button" class="gux-disclosure-button">
        <gux-icon decorative="" icon-name="fa/caret-left-solid"></gux-icon>
      </button>
      <div class="gux-disclosure-panel" id="gux-disclosure-button-panel-i" role="region">
        <slot name="panel-content"></slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-disclosure-button-legacy>
`;

exports[`gux-disclosure-button #render should render component as expected (6) 1`] = `
<gux-disclosure-button-legacy is-open="" position="right">
  <mock:shadow-root>
    <div class="gux-disclosure-button-container gux-right">
      <button aria-controls="gux-disclosure-button-panel-i" aria-expanded="true" aria-label="Disclosure button" class="gux-disclosure-button">
        <gux-icon decorative="" icon-name="fa/caret-right-solid"></gux-icon>
      </button>
      <div class="gux-active gux-disclosure-panel" id="gux-disclosure-button-panel-i" role="region">
        <slot name="panel-content"></slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-disclosure-button-legacy>
`;

exports[`gux-disclosure-button #render should render component as expected (7) 1`] = `
<gux-disclosure-button-legacy label="More Info">
  <mock:shadow-root>
    <div class="gux-disclosure-button-container gux-left">
      <button aria-controls="gux-disclosure-button-panel-i" aria-expanded="false" aria-label="More Info" class="gux-disclosure-button">
        <gux-icon decorative="" icon-name="fa/caret-right-solid"></gux-icon>
      </button>
      <div class="gux-disclosure-panel" id="gux-disclosure-button-panel-i" role="region">
        <slot name="panel-content"></slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-disclosure-button-legacy>
`;
